# nrf24stuff

./: .gitignore  NRFReceiver.service  NRFSensors.sln  README.md  crontab  crontab_study  install.sh  nrf24_receiver.py  opi_sensors.sh  pyvenv.cfg  receiver.ini.orangepi  receiver.ini.rpi  requirements.txt  rpi_am2301.py  rpi_bedroom.py  temp_sender.ino
SensorPayload/: SensorPayload.vcxitems
bedroom_sensors/: opi_sensors.sh  requirements.txt  rpi_bedroom.py
esphome/: DETECTION_ACCURACY_HISTORY.md  README.md  cat-feeder.md  cat-feeder.yaml  fountain.yaml  furnace.yaml  hottub-test.yaml  hottub.md  hottub.yaml  lr-plants.yaml  rain-barrel.md  rain-barrel.net  rain-barrel.yaml  register-booster.md  register-fans.md  register-fans.net  register-fans.vrt  register-fans.yaml  washer.md  washer.yaml
fridge_sensor/: fridge_sensor.ino  fridge_sensor.vcxproj  fridge_sensor.vcxproj.filters
hot_tub/: hot_tub.ino  platformio.ini
lib/: library.json  nrfdata.h  payload.h
light_sensor/: light_sensor.ino  light_sensor.vcxproj  light_sensor.vcxproj.filters  si7021.h
pool_sensor/: pool_sensor.ino  pool_sensor.vcxproj  pool_sensor.vcxproj.filters
protobuf/: nrf_packet.proto
pwm_fan/: fan_control.service  fan_control.sh
radio_receiver/: radio_receiver.ino
radio_test/: radio_test.ino
rpi_am2301_temp/: requirements.txt  rpi_am2301.py
study_am2301_temp/: pyproject.toml  requirements.txt  rpi_am2301.py  run_am2301.sh
temp_sender/: payload.h  temp_sender.ino  temp_sender.vcxproj  temp_sender.vcxproj.filters
temp_sender2/: debug_stuff.h  payload.h  temp_sender2.ino  (+2 more)
(+43 files in other folders)
