[tool.poetry]
name = "study-am2301-temp"
version = "0.1.0"
description = "AM2301 temperature and humidity sensor reader with MQTT/Home Assistant integration"
authors = ["weather"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ha-mqtt-discoverable = "*"
adafruit-circuitpython-bmp3xx = "*"
adafruit-circuitpython-sgp30 = "*"
adafruit-circuitpython-dht = "*"
paho-mqtt = "*"
click = "*"
adafruit-python-shell = "*"
gpiod = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
